# qr-generator

./: .gitignore  README.md  pyproject.toml
src/qr_tool/cli/: main.py
src/qr_tool/core/: engine.py  exceptions.py  models.py
src/qr_tool/infra/: decoder.py  encoder.py
tests/: test_cli.py  test_core.py
